# ubiquitous-potato

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
autobackup-service/: CMakeLists.txt  directoryWatcher.h  manifest.cmake
autobackup-service/src/: Main.cpp  directoryWatcher.cpp
niv-server/: CMakeLists.txt  manifest.cmake
niv-server/src/: Main.cpp
references-lib/: CMakeLists.txt  manifest.cmake  references.h
references-lib/src/: handlers.cpp  references.cpp
server/: CMakeLists.txt
server/src/: Main.cpp
